# polypartition

./: meson.build
src/: meson.build  polypartition.cpp
test/: meson.build  test.cpp
